--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,4 +16,4 @@ phases:
       - echo Build completed on `date`
 artifacts:
   files:
-    - target/Pharma-App 0.0.1-SNAPSHOT.jar
+    - target/PharmaApp-0.0.1-SNAPSHOT.jar
